--- a/estilo.css
+++ b/estilo.css
@@ -6,10 +6,10 @@
 
 header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color: lightgray;
+  background-color: black;
 }
 
 .menu {
@@ -26,11 +26,11 @@ header {
 
 .menu a {
   text-decoration: none;
-  color: blue;
+  color: white;
   padding: 10px 15px;
 }
 .menu a:hover {
-  background-color: aqua;
+  background-color: gray ;
   border-radius: 5px;
 }
 
@@ -49,25 +49,55 @@ main {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  background-color: red;
-  width: 75%;
-  height: 100vh;
-
+  text-align: justify;
+  width: 60%;
+  margin-top: 30px;
 }
 
 .conteudo-lado {
   margin: 20px;
   width: 40%;
-  background-color: blue;
+  font-size: large;
 }
 
 .conteudo {
   word-wrap: break-word;
   overflow-wrap: break-word;
-  height: 100px;
-  width: 50%;  
-  background-color: yellow;
+  height: auto;
+  width: 100%;  
+  margin: 10px;
 }
+.conteudo-lista {
+  margin-left: 60px;
+
+}
+
+.conteudo-lista ul {
+  margin-left: 20px; 
+}
+
+.new-amsterdam-regular {
+  font-family: "New Amsterdam", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+
+.h1-1 {
+  flex: 1;
+  text-align: center;
+  color: white;
+}
+
+.icon {
+  border-radius: 10px;
+}
+
+h2 {
+  margin-top: 40px;
+}
+
+
 footer {
   background-color: lightgray;
   color: #000000;
@@ -103,4 +133,8 @@ footer a:hover {
 footer a:active {
   background-color: red;
   border-radius: 5px;
+}
+
+p {
+  font-size: 17px;
 }
