--- a/estilo.css
+++ b/estilo.css
@@ -35,7 +35,7 @@ header {
 }
 
 .menu a:active {
-  background-color: green;
+  background-color: rgb(225, 45, 45);
   border-radius: 5px;
 }
 
@@ -52,6 +52,9 @@ main {
   text-align: justify;
   width: 60%;
   margin-top: 30px;
+  margin-bottom: 20px;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .conteudo-lado {
@@ -81,27 +84,51 @@ main {
   font-style: normal;
 }
 
+.bebas-neue-regular {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
 .h1-1 {
   flex: 1;
   text-align: center;
+  justify-content: flex-end;
+
   color: white;
+}
+.h1-2 {
+  font-family: "Bebas Neue", sans-serif;
 }
 
 .icon {
   border-radius: 10px;
 }
 
+.redirect {
+  text-decoration: none;
+  color: white;
+}
+
+.redirect:hover {
+  color: red;
+}
+
 h2 {
+  font-family: "Bebas Neue", sans-serif;
   margin-top: 40px;
   margin-bottom: 20px;
+}
+
+p {
+  font-size: large;
 }
 
 
 
 footer {
-  background-color: lightgray;
-  color: #000000;
+  background-color: black;
+  color: white;
   text-align: center;
   padding: 20px;
   width: 100%;
@@ -121,21 +148,18 @@ footer li {
 }
 
 footer a {
+
   text-decoration: none;
-  color: black;
+  color: white;
   padding: 10px 15px;
 }
 
 footer a:hover {
-  background-color: aqua;
+  background-color: gray;
   border-radius: 5px;
 }
 
 footer a:active {
-  background-color: red;
+  background-color: rgb(225, 45, 45);
   border-radius: 5px;
-}
-
-p {
-  font-size: large;
 }
