--- a/estilo.css
+++ b/estilo.css
@@ -90,15 +90,22 @@ main {
   font-style: normal;
 }
 
+.roboto-regular {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 .h1-1 {
   flex: 1;
   text-align: center;
   justify-content: flex-end;
-
   color: white;
 }
 .h1-2 {
   font-family: "Bebas Neue", sans-serif;
+  margin-top: 20px;
 }
 
 .icon {
@@ -111,16 +118,18 @@ main {
 }
 
 .redirect:hover {
-  color: red;
+  text-shadow: red -3px 0, gray 3px 0;
+  transition: 0.5s;
 }
 
 h2 {
   font-family: "Bebas Neue", sans-serif;
-  margin-top: 40px;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 
 p {
+  font-family: "Roboto", sans-serif;
   font-size: large;
 }
 
