--- a/estilo.css
+++ b/estilo.css
@@ -133,6 +133,59 @@ p {
   font-size: large;
 }
 
+.formulario {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.formulario input {
+  margin-bottom: 10px;
+}
+
+.formulario .conteudo-lado {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+  height: 60vh;
+}
+
+.formulario .nome-sobrenome {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+}
+
+.formulario .check{
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  margin-right: 20px;
+}
+
+.coment {
+  margin-top: 75px;
+}
+
+textarea {
+  height: 100px;
+}
+
+.formulario button {
+  padding: 10px 20px;
+  border: none;
+  background-color: orange;
+  color: black;
+  font-size: 16px;
+  border-radius: 5px;
+}
+
+.formulario button:hover {
+  background-color: green;
+  transition: 0.3s;
+}
+
 
 
 footer {
