--- a/estilo.css
+++ b/estilo.css
@@ -108,7 +108,12 @@ main {
 
 .h1-2 {
   font-family: "Bebas Neue", sans-serif;
-  color: white;
+  color: black;
+  margin-top: 20px;
+}
+.h1-3{
+  font-family: "Bebas Neue", sans-serif;
+  color: whitesmoke;
   margin-top: 20px;
 }
 
