--- a/estilo.css
+++ b/estilo.css
@@ -160,6 +160,7 @@ p {
   padding: 20px;
   background-color: lightgray; 
   border-radius: 10px; 
+  box-shadow: black;
 }
 
 .formulario .conteudo-lado {
